# python_web_15_04

./: README.md  alembic.ini  docker-compose.yaml  main.py  models.py  pyproject.toml  seed.py  session.py
banks/: create_table.sql  insert_data.sql
cars/: create_table.sql  insert_data.sql  tasks.txt
migrations/versions/: 357984f69d41_base_tables.py
