[tool.poetry]
name = "blended-15-04-python"
version = "0.1.0"
description = ""
authors = ["Edward Litvinchuck <elitvinchuck@gmail.com>"]
readme = "README.md"
packages = [{include = "blended_15"}]

[tool.poetry.dependencies]
python = "^3.11"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
faker = "^24.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
